--- a/assignment2/problem2/Objects/problem2.build_log.htm
+++ b/assignment2/problem2/Objects/problem2.build_log.htm
@@ -23,7 +23,7 @@ Project File Date:  09/27/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
 assembling problem2.s...
 problem2.s(28): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
 linking...
