--- a/assignment3/problem3/Objects/problem3.build_log.htm
+++ b/assignment3/problem3/Objects/problem3.build_log.htm
@@ -18,18 +18,20 @@ Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARM.DLL V5.29.0.0
 Dialog DLL:      DARMP3.DLL 
 <h2>Project:</h2>
-C:\Users\david\Desktop\code\2022202092_Assembly_Programming\assignment2\problem1\problem1.uvproj
-Project File Date:  09/27/2023
+C:\Users\david\Desktop\code\2022202092_Assembly_Programming\assignment3\problem3\problem3.uvproj
+Project File Date:  10/10/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-assembling problem1.s...
-problem1.s(20): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
+Build target 'Target 1'
+assembling problem3.s...
+problem3.s(10): warning: A1495W: Target of branch is a data address
+problem3.s(11): warning: A1495W: Target of branch is a data address
+problem3.s(28): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
 linking...
-Program Size: Code=44 RO-data=0 RW-data=0 ZI-data=0  
-".\Objects\problem1.axf" - 0 Error(s), 1 Warning(s).
-Build Time Elapsed:  00:00:00
+Program Size: Code=48 RO-data=0 RW-data=0 ZI-data=0  
+".\Objects\problem3.axf" - 0 Error(s), 3 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
