--- a/assignment3/problem2/Objects/problem2.build_log.htm
+++ b/assignment3/problem2/Objects/problem2.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: •ÏVision V5.29.0.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: a a, a, LIC=----
+License Information: sunwoo yeon,  , LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.29.0.0
@@ -18,28 +18,18 @@ Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARM.DLL V5.29.0.0
 Dialog DLL:      DARMP3.DLL 
 <h2>Project:</h2>
-C:\Users\david\Desktop\code\2022202092_Assembly_Programming\assignment3\problem2\problem2.uvproj
-Project File Date:  10/10/2023
+C:\Users\david\Desktop\codes\2022202092_Assembly_Programming\assignment3\problem2\problem2.uvproj
+Project File Date:  10/15/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 assembling problem2.s...
-problem2.s(7): error: A1137E: Unexpected characters at end of line
-problem2.s(10): error: A1137E: Unexpected characters at end of line
-problem2.s(11): error: A1647E: Bad register name symbol, expected Integer register
-problem2.s(12): error: A1163E: Unknown opcode jmp , expecting opcode or Macro
-problem2.s(14): error: A1137E: Unexpected characters at end of line
-problem2.s(15): error: A1647E: Bad register name symbol, expected Integer register
-problem2.s(16): error: A1163E: Unknown opcode je , expecting opcode or Macro
-problem2.s(17): error: A1163E: Unknown opcode inc , expecting opcode or Macro
-problem2.s(18): error: A1163E: Unknown opcode jmp , expecting opcode or Macro
-problem2.s(20): error: A1137E: Unexpected characters at end of line
-problem2.s(21): error: A1647E: Bad register name symbol, expected Integer register
-problem2.s(22): error: A1163E: Unknown opcode ret , expecting opcode or Macro
-problem2.s(23): warning: A1447W: Missing END directive at end of file, but found a label named END
-".\Objects\problem2.axf" - 12 Error(s), 1 Warning(s).
-Target not created.
+problem2.s(20): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
+problem2.s(25): warning: A1581W: Added 2 bytes of padding at address 0x42
+linking...
+Program Size: Code=72 RO-data=0 RW-data=0 ZI-data=0  
+".\Objects\problem2.axf" - 0 Error(s), 2 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
