--- a/assignment4/problem2/Objects/problem2.build_log.htm
+++ b/assignment4/problem2/Objects/problem2.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: •ÏVision V5.29.0.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: a a, a, LIC=----
+License Information: sunwoo yeon,  , LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.29.0.0
@@ -18,17 +18,13 @@ Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARM.DLL V5.29.0.0
 Dialog DLL:      DARMP3.DLL 
 <h2>Project:</h2>
-C:\Users\david\Desktop\code\2022202092_Assembly_Programming\assignment4\problem2\problem2.uvproj
-Project File Date:  10/30/2023
+C:\Users\david\Desktop\codes\2022202092_Assembly_Programming\assignment4\problem2\problem2.uvproj
+Project File Date:  10/31/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-assembling problem2.s...
-problem2.s(21): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
-linking...
-Program Size: Code=48 RO-data=0 RW-data=0 ZI-data=0  
-".\Objects\problem2.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\problem2.axf" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
