--- a/assignment4/problem4/Objects/problem4.build_log.htm
+++ b/assignment4/problem4/Objects/problem4.build_log.htm
@@ -18,13 +18,17 @@ Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARM.DLL V5.29.0.0
 Dialog DLL:      DARMP3.DLL 
 <h2>Project:</h2>
-C:\Users\david\Desktop\codes\2022202092_Assembly_Programming\assignment4\problem3\problem3.uvproj
+C:\Users\david\Desktop\codes\2022202092_Assembly_Programming\assignment4\problem4\problem4.uvproj
 Project File Date:  10/31/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\Objects\problem3.axf" - 0 Error(s), 0 Warning(s).
+assembling problem4.s...
+problem4.s(90): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
+linking...
+Program Size: Code=208 RO-data=0 RW-data=0 ZI-data=0  
+".\Objects\problem4.axf" - 0 Error(s), 1 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
