--- a/project/Objects/project.build_log.htm
+++ b/project/Objects/project.build_log.htm
@@ -24,7 +24,11 @@ Project File Date:  11/22/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
+assembling source_2.s...
+source_2.s(130): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
+linking...
+Program Size: Code=344 RO-data=0 RW-data=0 ZI-data=0  
+".\Objects\project.axf" - 0 Error(s), 1 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
