project: insertion sort fix

--- a/project/Objects/project.build_log.htm
+++ b/project/Objects/project.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: •ÏVision V5.29.0.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: sunwoo yeon,  , LIC=----
+License Information: a a, a, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.29.0.0
@@ -18,16 +18,16 @@ Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARM.DLL V5.29.0.0
 Dialog DLL:      DARMP3.DLL 
 <h2>Project:</h2>
-C:\Users\david\Desktop\codes\2022202092_Assembly_Programming\project\project.uvproj
-Project File Date:  11/22/2023
+C:\Users\david\Desktop\2022202092_Assembly_Programming\project\project.uvproj
+Project File Date:  12/01/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 assembling source_2.s...
-source_2.s(130): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
+source_2.s(119): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
 linking...
-Program Size: Code=344 RO-data=0 RW-data=0 ZI-data=0  
+Program Size: Code=308 RO-data=0 RW-data=0 ZI-data=0  
 ".\Objects\project.axf" - 0 Error(s), 1 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
