--- a/project/Objects/project.build_log.htm
+++ b/project/Objects/project.build_log.htm
@@ -18,16 +18,17 @@ Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARM.DLL V5.29.0.0
 Dialog DLL:      DARMP3.DLL 
 <h2>Project:</h2>
-C:\Users\david\Desktop\2022202092_Assembly_Programming\project\project.uvproj
-Project File Date:  12/01/2023
+C:\Users\david\Desktop\code\2022202092_Assembly_Programming\project\project.uvproj
+Project File Date:  12/04/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 assembling source_2.s...
-source_2.s(124): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
+assembling source_1.s...
+source_1.s(145): warning: A1608W: MOV pc,<rn> instruction used, but BX <rn> is preferred
 linking...
-Program Size: Code=324 RO-data=0 RW-data=0 ZI-data=0  
+Program Size: Code=728 RO-data=0 RW-data=0 ZI-data=0  
 ".\Objects\project.axf" - 0 Error(s), 1 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
